Fix padding of #main on mobile

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -134,7 +134,7 @@ a:active {transform: translateY(2px);}
 }
 
 #main {
-	padding: 1rem 1rem 0;
+	padding: 1.7rem 1rem 0;
 	@media screen and #{breakpoint(small only)} {
 		body.show-left-menu & {filter: blur(1px);}
 		}
